wl nw